<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ChantHomeActivity"
    android:weightSum="1"
    android:background="@drawable/cup"
    android:id="@+id/app_name"
    android:layout_marginTop="-20dp"
    android:layout_marginRight="-20dp"
    android:layout_marginLeft="-20dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        >

        <RelativeLayout
            android:id="@+id/menubar_layout"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3">

            <Button
                android:id="@+id/button_goals"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:background="@drawable/goals"
                android:onClick="goalsAction"
                android:paddingBottom="10dp"
                android:text="@string/goals"
                android:textColor="@color/titlecolor"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <Button
                android:id="@+id/button_community"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:background="@drawable/cloud"
                android:onClick="communityAction"
                android:paddingBottom="10dp"
                android:text="@string/community"
                android:textColor="@color/titlecolor"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3">

            <Button
                android:id="@+id/button_share"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:background="@drawable/share"
                android:onClick="shareAction"
                android:paddingBottom="10dp"
                android:text="@string/share"
                android:textColor="@color/titlecolor"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>


    <Button
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:background="#00000000"
        android:layout_height="300dp"
        android:id="@+id/button_bell"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:onClick="bellAction"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"

        android:background="@color/dark_tintcolor"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset"
            android:textColor="@color/whitecolor"
            android:textSize="24sp"
            android:background="#00000000"
            android:layout_height="100dp"
            android:onClick="resetTimerAction"/>

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_gravity="center"

            android:textColor="@color/whitecolor"
            android:textSize="28sp"
            android:textAlignment="center"

            android:gravity="center"
            android:onClick="timerAction"
            />

        <Button
            android:layout_width="100dp"
            android:layout_gravity="right"

            android:textColor="@color/whitecolor"
            android:textSize="24sp"
            android:background="@drawable/settings"
            android:layout_height="100dp"
            android:onClick="lotusAction"/>
    </LinearLayout>


</RelativeLayout>


